--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -214,33 +214,27 @@
                     <p>The NNC, as mandated by law, is the country's highest policy-making 
                         and coordinating body on nutrition.
                     </p>
-                    <div class="my-5 text-dark bg-secondary">
-                        <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                        <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                        <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                        <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-                    </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-4">
                             <h2 class="footer-heading mb-4">Contact Us</h2>
                             <ul class="list-unstyled">
-                            <li><span><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/contactLogo.png" alt="dasma-logo"> +63-9760494415</span></li>
-                            <li><a href="https://www.facebook.com/Cho3dasmarinas" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/facebookLogo.png" alt="dasma-logo"> City Health Office </a></li>
+                            <li><span><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/contactLogo.png' %}" alt="Phone-logo"> +63-9760494415</span></li>
+                            <li><a href="https://www.facebook.com/Cho3dasmarinas" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/facebookLogo.png' %}" alt="City Health Office-logo"> City Health Office </a></li>
                             </ul>
                         </div>
                         <div class="col-lg-4">
                             <h2 class="footer-heading mb-4">Resource Materials</h2>
                             <ul class="list-unstyled">
-                            <li><a href="https://www.nnc.gov.ph/opt2022" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/nncLogo.png" alt="dasma-logo"> eOPT Tools</a></li>
+                            <li><a href="https://www.nnc.gov.ph/opt2022" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/nncLogo.png' %}" alt="NNC-logo"> eOPT Tools</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-4">
                             <h2 class="footer-heading mb-4">Resources</h2>
                             <ul class="list-unstyled">
-                            <li><a href="https://www.nnc.gov.ph/" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/nncLogo.png" alt="dasma-logo"> NNC Website</a></li>
-                            <li><a href="https://doh.gov.ph/" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/dohLogo.png" alt="dasma-logo">DOH Website</a></li>
+                            <li><a href="https://www.nnc.gov.ph/" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/nncLogo.png' %}" alt="NNC-logo"> NNC Website</a></li>
+                            <li><a href="https://doh.gov.ph/" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/dohLogo.png' %}" alt="DOH-logo">DOH Website</a></li>
                             </ul>
                         </div>
                     </div>
