--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -38,16 +38,27 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="dropdownUser1">
                                 
-                                <div>
-                                    <i class="fa fa-lg fa-fw fa-user bi mx-auto"></i>   
-                                    <span style="font-size: 15px;">{{ user.first_name }} {{ user.last_name }}</span>
+                                <div class="text-dark d-block justify-content-start p-2"style="text-decoration: none; background-color: rgba(255,255,255,0); padding: 0 !important;">
+                                    <div class="card p-3 d-flex align-items-center justify-content-center">
+                                        <div class="row d-block">
+                                            <div class="d-flex justify-content-center my-2">
+                                                <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px ;"></i>  
+                                            </div>
+                                             <div class="d-flex justify-content-center text-center p-2">  
+                                                <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
+                                             </div>
+                                        </div>
+                                    </div>
+                                    <a class="card-footer d-flex align-items-center justify-content-center" style="height:30px; background-color:none !important; border-radius: 0px !important;margin:0px !important;" href="{% url 'new_pass' user.id %}">
+                                        <p class="mt-3"style="font-size:15px;">View Profile</p>
+                                    </a>
                                 </div>
                                 <div>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
                                 </div>
                                 
-                            </ul>                    
+                            </ul>                             
                         </li>
                     </ul>
                 </div>
@@ -65,6 +76,9 @@
 <div class="container text-black">
     <div class="row">
         <div class="col">
+            <div class="d-flex align-items-center justify-content-sm-end justify-content-center">
+                <button class="btn mb-2"type="button" style="background-color: #188045; color: white;" data-bs-toggle="modal" data-bs-target="#modalArc"><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> Archive</h6></button>
+            </div>
             <div class="card-header">
                 <h3>Preschooler's Nutritional Status</h3>
             </div>
@@ -126,9 +140,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class=" " style="margin-top:20px;">
-        <button type="button" style="background-color: #188045; color: white;" class="btn " data-bs-toggle="modal" data-bs-target="#modalArc"><h5 class="fa fa-archive"> Archive</h5></button>
     </div>
     <div class="modal fade" id="modalArc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
