--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -27,7 +27,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
         <div class="container-fluid">
             <div>
-                <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
+                <img class="navbar-icon animateNavbarIcon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
                 <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
             </a>
             </div>
