--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -84,8 +84,14 @@
         <div class="container-grid">
             <div class="">
                 <div class="row"> 
-                    <div class="col">
-                        <h3 style="text-align:left;">Preschooler List</h3>
+                    <div class="row d-flex justify-content-stretch flex-row ">
+                        <div class="col-sm-6  mb-3 d-flex justify-content-sm-start justify-content-center">
+                            <h3 style="text-align:left;">My Preschoolers</h3>
+                        </div>
+                        <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
+                            <button style="margin-bottom: 15px; background-color: #188045;border-color:#188045; height: 50px;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched">
+                                <span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
+                        </div>
                     </div>
                 </div>
             <hr>
@@ -93,15 +99,6 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="row d-flex justify-content-stretch flex-row ">
-                <div class="col-sm-6  mb-3 d-flex justify-content-sm-start justify-content-center">
-                    <h4>My Preschoolers</h4>
-                </div>
-                <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
-                    <button style="margin-bottom: 15px; background-color: #188045;border-color:#188045; height: 50px;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched">
-                        <span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
-                </div>
-            </div>
             <div class="modal fade" id="addSched" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                     <div class="modal-content">
@@ -151,16 +148,16 @@
         {% for chunk in chunks %}
             <div class="row">
                 {% for item in chunk %}
-                    <div class="col-md-{{ numberOfColumns }} mb-3">
-                        <a class="card hoverable text-decoration-none" href="{% url 'parent_preschooler' item.id %}" style="min-height: 140px;">
+                    <div class="col-lg-{{ numberOfColumns }} mb-3">
+                        <a class="card hoverable text-decoration-none" href="{% url 'parent_preschooler' item.id %}" style="min-height: 140px;border-radius: 10px 10px 10px 10px;">
                             <div class="card-body d-flex flex-column align-items-stretch justify-content-center">
                                 <div class="text-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center p-2">
                                             {% if item.gender == 'Male' %}
-                                                <img class="rounded-circle"src="https://png.pngtree.com/png-vector/20190114/ourlarge/pngtree-vector-avatar-icon-png-image_313572.jpg" height="100%" width="100%">
+                                                <img class="rounded-circle"src="{% static '/Media/kidBoy.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
                                             {% elif item.gender == 'Female' %}
-                                                <img class="rounded-circle"src="https://cdn-icons-png.flaticon.com/512/186/186037.png?fbclid=IwAR1OPbyTuELnCON7Mtn4GDZzwEDeQYfe3udTNuHzzx-O_fhYQZCzvUPjSDQ" height="100%" width="100%">
+                                                <img class="rounded-circle"src="{% static '/Media/kidGirl.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
                                             {% endif %}
                                         </div>
                                         <div class="col-8 d-flex justify-content-center align-items-center text-start  text-body">
