--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -207,7 +207,7 @@
                                     </div>
                                     {% if preschooler.wfa is None%}
                                         <div class="card-body">
-                                            <p class="card-text" >{{ preschooler.wfa }}</p>
+                                            <p class="card-text h5" >{{ preschooler.wfa }}</p>
                                         </div>
                                     {% elif preschooler.wfa > 2.0 %}
                                         <div class="card-body p-3">
