--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -270,7 +270,7 @@
                             <div class="col-md-6 col-12 mb-3">
                                 <a class="card hoverable text-decoration-none p-0" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#modalWHFA">
                                     <div class="card-header">
-                                        <h5 class="card-title">Weight to Height for Age (WHFA)</h5>
+                                        <h5 class="card-title">Weight for Height for Age (WHFA)</h5>
                                     </div>
                                     {% if preschooler.whfa is None %}
                                         <div class="card-body p-3">
@@ -315,19 +315,23 @@
                                         </div>
                                     {% elif preschooler.bmifa > 2.0 %}
                                         <div class="card-body p-3">
-                                            <p class="card-text  h5" style="color: rgb(242, 98, 33);">  Overweight/Obese ({{ preschooler.bmifa }})</p>
+                                            <p class="card-text  h5" style="color: rgb(238, 29, 35);"> Obese ({{ preschooler.bmifa }})</p>
                                         </div>
-                                    {% elif preschooler.bmifa >= -2.0 and preschooler.bmifa <= 2.0 %}
+                                    {% elif preschooler.bmifa > 1.0 and preschooler.bmifa <= 2.0 %}
+                                        <div class="card-body p-3">
+                                            <p class="card-text  h5" style="color: rgb(242, 98, 33);"> Overweight ({{ preschooler.bmifa }})</p>
+                                        </div>
+                                    {% elif preschooler.bmifa > -1.0 and preschooler.bmifa <= 1.0 %}
                                         <div class="card-body p-3">
                                             <p class="card-text  h5" style="color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa }})</p>
                                         </div>
-                                    {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
+                                    {% elif preschooler.bmifa > -2.0 and preschooler.bmifa <= -1.0 %}
                                         <div class="card-body p-3">
-                                            <p class="card-text  h5" style="color: rgb(255, 241, 2);">Wasted ({{ preschooler.bmifa }})</p>
+                                            <p class="card-text  h5" style="color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</p>
                                         </div>
                                     {% else %}
                                         <div class="card-body p-3">
-                                            <p class="card-text  h5" style="color: rgb(238, 29, 35);">Severely Wasted ({{ preschooler.bmifa }})</p>
+                                            <p class="card-text  h5" style="color: rgb(80, 0, 0);"> Severely Wasted ({{ preschooler.bmifa }})</p>
                                         </div>
                                     {% endif %}
                                     <div class="card-footer text-center text-muted">
