Remove Phone Num Spinner

--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -20,6 +20,20 @@
     <link rel="stylesheet" href="{% static '/CSS/css/fstdropdown.css' %}">
     <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
     <title>Preschoolers Profiling and Monitoring System</title>
+
+    <!-- Remove Phone num Spinner -->
+    <style>
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            appearance: none;
+            margin: 0;
+        }
+        input[type=number] {
+            -moz-spinner-appearance: textfield;
+        }
+    </style>
+    
 </head>
 <body>
     <!-- Header -->
