--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -266,7 +266,7 @@
                                     </div>
                                 </a>
                             </div>
-<!----- CARD FOR WHFA ---------->
+<!----- CARD FOR w ---------->
                             <div class="col-md-6 col-12 mb-3">
                                 <a class="card hoverable text-decoration-none p-0" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#modalWHFA">
                                     <div class="card-header">
