--- a/ppms_project/profilingApp/templates/activities/User Profile.html
+++ b/ppms_project/profilingApp/templates/activities/User Profile.html
@@ -31,7 +31,7 @@
                                 <span class="circle" aria-hidden="true">
                                 <span class="icon arrow"></span>
                                 </span>
-                                <span class="button-text text-white d-flex align-items-center justify-content-center">Back</span>
+                                <span class="button-text d-flex align-items-center justify-content-center">Back</span>
                               </button>
                             </a>
                         </li>
