--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -125,10 +125,10 @@
                 <div class="card shadow-sm bg-white rounded h-100">
                         <!-- <div class="card-header" style="background-color: rgb(0, 165, 79) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Normal</h4>
+                            <h4 class="card-title">Severely Wasted</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
                         </div>
                     </div>
                 </div>
@@ -147,10 +147,10 @@
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <!-- <div class="card-header " style="background-color: rgb(238, 29, 35) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Severly Wasted</h4>
+                            <h4 class="card-title">Normal</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
                         </div>
                     </div>
                 </div>
@@ -158,10 +158,21 @@
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <!-- <div class="card-header" style="background-color: rgb(242, 98, 33)!important;"> -->
                             <div class="card-header">
-                            <h4 class="card-title">Overweight/Obese</h4>
+                            <h4 class="card-title">Overweight</h4>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100">
+                        <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
+                        <div class="card-header">
+                            <h4 class="card-title">Obese</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
                         </div>
                     </div>
                 </div>
@@ -209,21 +220,23 @@
         }
     },
     data:{
-        labels: ["Normal", "Wasted", "Severly Wasted","Overweight/Obese"],
+        labels: ["Severely Wasted", "Wasted", "Normal","Overweight","Obese"],
         datasets: [{
                 label: 'Normal',
                 data: data_count,
                 backgroundColor: [
-                'rgb(0, 165, 79)',
-                'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
+                'rgb(255, 241, 2)',
+                'rgb(0, 165, 79)',
+                'rgb(242, 98, 33)',
                 'rgb(242, 98, 33)',
                 ],
                 borderColor: [
-                'rgb(0, 165, 79)',
-                'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
-                'rgb(242, 98, 33)',,
+                'rgb(255, 241, 2)',
+                'rgb(0, 165, 79)',
+                'rgb(242, 98, 33)',
+                'rgb(242, 98, 33)',
                 ],
                 borderWidth: 1
             }
