--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -68,6 +68,16 @@
     </div>
 </header>
 
+<!-- Tooltip Script -->
+<script>
+    $(function () {
+       $('[data-toggle="tooltip"]').tooltip({'delay': { show: 400, hide: 100 }})})
+       $('[data-toggle="tooltip"]').on('shown.bs.tooltip', function () {
+       $('.tooltip').addClass('animated fade');
+    })
+</script>
+    
+
 <!-- Dashboard -->
 <div id="grid" class="container-fluid" style="margin-top:85px;">
     <div class="container-grid">
@@ -117,17 +127,19 @@
                                 <td>{{ preschooler.age_months }}</td>
                                 {% if preschooler.bmifa is None %}
                                     
-                                    <td> No Data Record </td>
+                                    <td style="background-color: rgb(211, 211, 211);"> No Data Record </td>
                                     
+                                    {% elif preschooler.bmifa > 3.0%}
+                                    <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.bmifa }})</td>
                                 {% elif preschooler.bmifa > 2.0 %}
-                                    <td style="color: rgb(0, 0, 0); background-color: #f67f72; font-weight: 500;"> Overweight/Obese ({{ preschooler.bmifa }})</td>
+                                    <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.bmifa }})</td>
                                 {% elif preschooler.bmifa >= -2.0 and preschooler.bmifa <= 2.0 %}
-                                    <td style="color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
+                                    <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
                                 {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
-                                    <td style="color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
+                                    <td style="background-color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
                                 {% else %}
-                                    <td style="color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
-                                {% endif %}
+                                    <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
+                                {% endif %}              
                                 <td style="text-align: center;">
                                     <div>
                                         <a href="{% url 'preschooler_profile' preschooler.id %}"><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
@@ -180,19 +192,21 @@
                                     {% if preschooler.bmifa is None %}
                                     
                                         <td> No Data Record </td>
-                                        
+                                    {% elif preschooler.bmifa > 3.0%}
+                                        <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.bmifa }})</td>
                                     {% elif preschooler.bmifa > 2.0 %}
-                                        <td style="color: rgb(242, 98, 33);"> Overweight/Obese ({{ preschooler.bmifa }})</td>
+                                        <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.bmifa }})</td>
                                     {% elif preschooler.bmifa >= -2.0 and preschooler.bmifa <= 2.0 %}
-                                        <td style="color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
+                                        <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
                                     {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
-                                        <td style="color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
+                                        <td style="background-color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
                                     {% else %}
-                                        <td style="color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
+                                        <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
                                     {% endif %}                                   
                                 </tr>
                                 {% endfor %}
                             </tbody>
+
                         </table>
                     </div>
                 </div>
