--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -94,7 +94,7 @@
 <!-- Tooltip Script -->
 <script>
     $(function () {
-       $('[data-toggle="tooltip"]').tooltip({'delay': { show: 400, hide: 100 }})})
+       $('[data-toggle="tooltip"]').tooltip()})
        $('[data-toggle="tooltip"]').on('shown.bs.tooltip', function () {
        $('.tooltip').addClass('animated fade');
    })
