--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -7,70 +7,88 @@
     <nav class="navbar fixed-top index__navbar scrolled border-bottom" 
     style=" padding-left:3%; padding-right:3%;">
         <div class="flex-fill p-1 py-1">
-            <div class="d-flex align-items-center justify-content-between">
+            <div id="mobileNav" class="d-flex align-items-center justify-content-between">
                 <div>
                     <a href="#" class="name" style="text-decoration: none;">
                         <img id="adminIcon" class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:rgb(3, 3, 3); margin-left:10px;">City of Dasmariñas</span>
+                        <span id="hidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
                     </a>
                 </div>
-                <div id="navLinks">
-                    <ul class="nav text-small">
+                <label class="burger "for="toggle"><i  id="hamburger" class="fa fa-fw fa-bars" style="font-size: 24px;"></i></label>
+                <input type="checkbox" id="toggle">
+                <div class="menu" id="navLinks">
+                    <ul id="nav" class="nav text-small">
                         <li>
-                            <a href="{% url 'admin_home' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                            <a href="{% url 'admin_home' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"  
                             title="Admin Home">
-                            <i class="fa fa-fw fa-home" style="font-size: 24px;"></i>   
+                            <i id="navIcon" class="fa fa-fw fa-home" style="font-size: 24px;"></i>   
+                            <span id="navText" style="font-size: 20px;">Home</span>
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'admin_home2' %}" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"                            title="Preschooler Status">
-                            <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
+                            <a href="{% url 'admin_home2' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            title="Preschooler Status">
+                            <i id="navIcon" class="fa fa-3x fa-fw fa-id-card " style="font-size: 24px;"></i>
+                            <span id="navText" style="font-size: 20px; " >Preschooler Status</span>
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'admin_barangay' %}" class="nav-link" style="color:rgb(27, 177, 92) !important;" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'admin_barangay' %}" style="color:rgb(27, 177, 92) !important;"class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="List of Barangay">
-                            <i class="fa fa-3x fa-fw fas fa-landmark " style="font-size: 24px;"></i>
+                            <i id="navIcon" class="fa fa-3x fa-fw fas fa-landmark " style="font-size: 24px;"></i>
+                            <span id="navText" style="font-size: 20px;color:rgb(27, 177, 92) !important;" >List of Barangay</span>
                             </a>
                         </li>
                         <li>
                             {% if invalidated_count > 0 %}
                             <a href="{% url 'bhw_validation' %}" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                                 title="BHW Validation" >
-                                <i class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>
+                                <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>
+                                <span id="navText" style="font-size: 20px; " >BHW Validation</span>
                                 <span class="position-absolute top-25 start-75 translate-middle badge rounded-pill bg-danger">
                                     {{ invalidated_count }}
-                                    <span class="visually-hidden">unread messages</span>
+                                    <span class="visually-hidden">BHW Validation</span>
                                 </span></a>
                             {% else %}
                             <a href="{% url 'bhw_validation' %}" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                                 title="BHW Validation" >
-                                <i class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>  
+                                <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>  
+                                <span id="navText"style="font-size: 20px; " >BHW Validation</span>
                                 </a>
                             {% endif %}
                         </li>
                         <li>
                             <a href="{% url 'admin_userAccounts' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Accounts">
-                            <i class="fa fa-3x fa-fw fas fa-users " style="font-size: 24px;"></i>
+                            <i id="navIcon" class="fa fa-3x fa-fw fas fa-users " style="font-size: 24px;"></i>
+                            <span id="navText" style="font-size: 20px; " >User Accounts</span>
                             </a>
                         </li>
                         <li>
-                            <a class="btn nav-link" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a id="navIcon" class="btn nav-link position-relative" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Settings" aria-expanded="false">
-                            
-                                <i class="fa fa-fw fa-user-cog bi dropdown-toggle" style="font-size: 24px;"></i>   
+                                <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
+                                <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
+                                    <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
+                                </span></a>
                             </a>
+                            <a id="navText" style="color:white; text-decoration: none;font-size: 20px;"href="{% url 'logout' %}" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            title="Log Out Account">Sign Out</a>
                             <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="dropdownUser1">
-                               
-                                <div>
-                                    <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>  
-                                    <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
+                                <div class="card p-3 d-flex align-items-center justify-content-center">
+                                    <div class="row d-block">
+                                        <div class="d-flex justify-content-center my-2">
+                                            <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px ;"></i>  
+                                        </div>
+                                         <div class="d-flex justify-content-center text-center p-2">  
+                                            <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
+                                         </div>
+                                    </div>
                                 </div>
                                 <div>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
-                                </div>
+                                    <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;"href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt"></i>Sign out</a></li>
+                                </div>  
                             </ul>                    
                         </li>
                     </ul>
@@ -84,7 +102,7 @@
 <!-- Tooltip Script -->
 <script>
     $(function () {
-       $('[data-toggle="tooltip"]').tooltip({'delay': { show: 400, hide: 100 }})})
+       $('[data-toggle="tooltip"]').tooltip()})
        $('[data-toggle="tooltip"]').on('shown.bs.tooltip', function () {
        $('.tooltip').addClass('animated fade');
    })
