--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -35,22 +35,20 @@
     </style>
     
 </head>
-<body>
+<body >
     <!-- Header -->
     <div class="site-header" >
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
         <div class="container-fluid">
             <div>
                 <img class="navbar-icon animateNavbarIcon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-                <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
-            </a>
+                <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
             </div>
         </div>
         </nav>
     </div>
     <!-- Form -->
-    <div class="container-fluid" id="homeBody">
-        <br>
+    <div class="container-fluid p-0" id="homeBody" >
         <div class="form shadow-lg" id="formHeight">
             <div class="form-toggle"></div>
             <div class="form-panel one">
